[gd_scene load_steps=4 format=3 uid="uid://73kthhwr43x4"]

[ext_resource type="Texture2D" uid="uid://40sgkcqspc48" path="res://textures/wilbur-joy.png" id="1_45ow3"]
[ext_resource type="Theme" uid="uid://eqitrdce3ik2" path="res://theme.tres" id="1_tgcok"]
[ext_resource type="Script" path="res://game/player_score.gd" id="2_ob15k"]

[node name="PlayerScore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( "1_tgcok" )
script = ExtResource( "2_ob15k" )
__meta__ = {
"_edit_use_custom_anchors": false
}

[node name="NameAndScore" type="VBoxContainer" parent="."]
offset_right = 175.0
offset_bottom = 75.0
size_flags_horizontal = 3

[node name="PlayerNameLabelBackground" type="ColorRect" parent="NameAndScore"]
minimum_size = Vector2(0, 30)
offset_top = 5.0
offset_right = 175.0
offset_bottom = 35.0
size_flags_vertical = 10
color = Color(0, 0, 0, 1)

[node name="PlayerNameLabel" type="Label" parent="NameAndScore/PlayerNameLabelBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Player Name"
horizontal_alignment = 1
vertical_alignment = 1
__meta__ = {
"_edit_layout_mode": 1,
"_edit_use_custom_anchors": false
}

[node name="PlayerScoreLabel" type="Label" parent="NameAndScore"]
offset_top = 39.0
offset_right = 175.0
offset_bottom = 75.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "sdlfkjsdlfk"
horizontal_alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterPortraitBackground" type="ColorRect" parent="."]
offset_left = 175.0
offset_right = 250.0
offset_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 0, 0, 1)
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="CharacterPortrait" type="TextureRect" parent="CharacterPortraitBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 7
size_flags_vertical = 7
texture = ExtResource( "1_45ow3" )
ignore_texture_size = true
stretch_mode = 5
__meta__ = {
"_edit_layout_mode": 1,
"_edit_use_custom_anchors": false
}
